--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <label>Name</label><br>
         <input type="text"><br>
         <label>Age</label><br>
+        <input type="text"><br>
+        <label>Password</label><br>
         <input type="password"><br>
         <label>Gender</label><br>
         <input type="radio" name="gender" value="male">Male<br>
